--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,6 +60,19 @@
     </head>
     <body>
         <h1>Skracacz URL</h1>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                {% if category == "error" %}
+                    <div class="alert alert-error">
+                    {{ message }}
+                    </div>
+                {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <p>Wklej adres URL:</p>
 
         <form action="/shorten" method="post">
